# sun_follower

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  debug.sh  flash.sh  kill.sh
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: sun_follower.1690110672670.pdom  sun_follower.1691570893447.pdom  sun_follower.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 11.snap  7.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/sun_follower/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree  12.tree  13.tree  19.tree  4.tree  7.tree  8.tree  9.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
BSP/: .mxproject  BSP.ioc  STM32F031K6Tx_FLASH.ld
BSP/Inc/: main.h  stm32f0xx_it.h
BSP/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Doc/: .$weather_station.drawio.bkp  .$weather_station.drawio.dtmp  weather_station.drawio
SunFollowerFw/: .mxproject  CMakeLists.txt  STM32F207XX_FLASH.ld  SunFollowerFw.ioc
SunFollowerFw/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h  sun_prediction.hpp
SunFollowerFw/Core/Src/: eth.c  freertos.c  gpio.c  i2c.c  main.c  main.cpp  main.cpp.bak  stm32f2xx_hal_timebase_tim.c  stm32f2xx_it.c  sun_prediction.cpp  usart.c  usb_otg.c
SunFollowerFw/cmake/: gcc-arm-none-eabi.cmake
SunFollowerFw/cmake/stm32cubemx/: CMakeLists.txt
python/: main.py
source/: application.cpp  application.hpp
sun_follower/: .cproject  .mxproject  .project  STM32F031K6TX_FLASH.ld  sun_follower Debug.launch  sun_follower Release.launch  sun_follower.ioc
sun_follower/Core/Inc/: main.h  stm32f0xx_it.h
sun_follower/Core/Src/: ds3231.h  gy271.h  itoa.h  main.c  main.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c  sun_prediction.h
sun_follower/Debug/: objects.list  sun_follower.elf  sun_follower.list  sun_follower.map
sun_follower/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f0xx_hal_msp.cyclo  stm32f0xx_hal_msp.su  stm32f0xx_it.cyclo  stm32f0xx_it.d  stm32f0xx_it.su  subdir.mk  system_stm32f0xx.d
sun_follower/Debug/Core/Startup/: subdir.mk
sun_follower/Debug/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_cortex.d  stm32f0xx_hal_flash.d  stm32f0xx_hal_gpio.d  stm32f0xx_hal_rcc.d  stm32f0xx_hal_rcc_ex.d  stm32f0xx_hal_uart.d  stm32f0xx_hal_uart_ex.d  subdir.mk
sun_follower/Release/: sun_follower.elf  sun_follower.list  sun_follower.map
sun_follower/Release/Core/Src/: main.cyclo  main.d  main.su  stm32f0xx_hal_msp.cyclo  stm32f0xx_hal_msp.d  stm32f0xx_hal_msp.su  stm32f0xx_it.cyclo  stm32f0xx_it.su  subdir.mk
sun_follower/Release/Core/Startup/: subdir.mk
sun_follower/Release/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal.d  stm32f0xx_hal_dma.d  stm32f0xx_hal_exti.d  stm32f0xx_hal_flash_ex.d  stm32f0xx_hal_i2c.d  stm32f0xx_hal_i2c_ex.d  stm32f0xx_hal_pwr.d  stm32f0xx_hal_pwr_ex.d  stm32f0xx_hal_tim.d  stm32f0xx_hal_tim_ex.d  stm32f0xx_hal_uart.cyclo  stm32f0xx_hal_uart_ex.cyclo  subdir.mk
(+13 files in other folders)
